--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=web-demo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/webdemo_db
-spring.datasource.username=hadongz
+spring.datasource.username=mfaturrahman
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -17,5 +17,10 @@ spring.flyway.locations=classpath:db/migration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
+
+# spring.config.import=optional:file:.env[.properties]
+app.jwt.secret=dGhpc2lzYXZlcnlzZWNyZXRrZXl0aGF0aXNhdGxlYXN0MjU2Yml0c2xvbmc=
+app.jwt.access-token-expiration=1800000
+app.jwt.refresh-token-expiration=259200000
 
 server.port=8080
