--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,19 @@
 spring.application.name=web-demo
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/webdemo_db
-spring.datasource.username=mfaturrahman
-spring.datasource.password=
+spring.config.import=optional:file:.env[.properties]
+
+app.jwt.secret=${APP_JWT_SECRET}
+app.jwt.access-token-expiration=${APP_JWT_ACCESS_TOKEN_EXPIRATION}
+app.jwt.refresh-token-expiration=${APP_JWT_REFRESH_TOKEN_EXPIRATION}
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
 
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.enabled=true
-
-# spring.config.import=optional:file:.env[.properties]
-app.jwt.secret=dGhpc2lzYXZlcnlzZWNyZXRrZXl0aGF0aXNhdGxlYXN0MjU2Yml0c2xvbmc=
-app.jwt.access-token-expiration=1800000
-app.jwt.refresh-token-expiration=259200000
-
-server.port=8080
